# interactive-planner

./: .dockerignore  AGENTS.md  SYSTEM_ARCHITECTURE.md  docker-compose.yml  issues.md  planner-spec.md
.claude/: launch.json
.mimocode/: .cron-lock
.mimocode/plans/: 1783917109361-playful-meadow.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test.db
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: audits.py  auth.py  cadence.py  domains.py  integration.py  learning.py  priorities.py  router.py  time_blocks.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  migrate.py  seed.py
backend/app/models/: audit.py  category.py  deadline.py  domain.py  learning.py  priority.py  protected_window.py  quarter.py  time_block.py  user.py
backend/app/schemas/: _converters.py  audit.py  auth.py  deadline.py  domain.py  learning.py  priority.py  protected_window.py  quarter.py  time_block.py
backend/app/services/: block_guard.py  cadence.py  deadline.py  identity_audit.py  learning.py  learning_curricula.py  niche_filter.py  priority_gate.py  time_audit.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_cadence.py  test_learning.py  test_priorities.py  test_time_blocks.py
backend/tests/unit/: test_learning_streak.py  test_priority_gate.py
deploy/: pos.service  setup-pos.sh
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+26 files in other folders)
